Fix scrollbar on firefox

--- a/src/css/toolbox-palettes-list.css
+++ b/src/css/toolbox-palettes-list.css
@@ -1,6 +1,7 @@
 .palettes-list-container {
   display: flex;
   flex-direction: column;
+  max-width: 175px;
 }
 
 .palettes-title {
